<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Home" />
    <item
        android:id="@+id/navigation_konten"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Konten" />
    <item
        android:id="@+id/navigation_menu3"
        android:icon="@drawable/baseline_battery_saver_24"
        android:title="Suhu Battery" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="Setting" />
</menu>
